--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <meta name="revisit-after" content="7 days">
     <meta name="distribution" content="global">
     
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BDB3396K1K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BDB3396K1K');
+</script>
+
+
     <!-- Canonical URL -->
     <link rel="canonical" href="https://nexussolution603.github.io/in/">
     
