Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="distribution" content="global">
-    
+    <meta name="google-site-verification" content="7pOobktqxnsqCYySlfqpfGoxeSLjYZ7VBYe1yCsOoE0" />
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BDB3396K1K"></script>
