--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEXUS SOLUTION 603 | Premium IT Services & Digital Solutions</title>
+    <title>Nexus Solution 603</title>
     
     <!-- ========== SEO META TAGS ========== -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="NEXUS SOLUTION 603 | Premium IT Services & Digital Solutions">
+    <meta name="title" content="Nexus Solution 603">
     <meta name="description" content="NEXUS SOLUTION 603 provides premium IT services, software development, cybersecurity, cloud solutions, web development, mobile apps, and digital transformation solutions for businesses worldwide. Based in Karachi, Pakistan.">
     <meta name="keywords" content="IT services Pakistan, software development, cybersecurity solutions, cloud computing, web development Karachi, mobile app development, digital transformation, IT consulting Pakistan, NEXUS SOLUTION 603, premium software solutions, enterprise IT services">
     <meta name="author" content="NEXUS SOLUTION 603">
